[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightglue-onnx"
version = "2.0.0"
description = "ONNX-compatible LightGlue: Local Feature Matching at Light Speed. Supports TensorRT, TorchDynamo"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Fabio Milentiansen Sim", email = "fabio.milentiansen.sim@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.1",
    "opencv-python>=4.10.0.84",
    "typer>=0.12.3",
    #"onnxruntime-gpu>=1.18.1",
]

# In uv, development/optional groups are handled via dependency-groups
[dependency-groups]
export = [
    "onnx>=1.16.1",
    "onnxscript>=0.1.0.dev20240708",
]

# --- Source Configuration (The tricky part) ---
# uv uses tool.uv.index for extra package sources
#[[tool.uv.index]]
#name = "onnxruntime-gpu-src"
#url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple"
#explicit = true

# Mapping specific packages to the specific index
[tool.uv.sources]
#onnxruntime-gpu = { index = "onnxruntime-gpu-src" }

# --- Tool Configuration (Unchanged) ---
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM",  # flake8-simplify
    "PLC",  # pylint
    "PLE",  # pylint
    "PLW",  # pylint
    "NPY",  # numpy
    "RUF",  # ruff
    "PERF",  # perflint
]
ignore = [
    "E501",  # line too long, handled by black
    "W191",  # indentation contains tabs
]